--- a/pages/home.html
+++ b/pages/home.html
@@ -6,13 +6,23 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
+            <div class="carousel-inner my-4">
                 <div class="carousel-item active">
                     <div class="d-block w-100 image-carousel"></div>
-                    <div class="carousel-caption d-md-block text-dark mb-5 pb-5">
-                        <h1>Battle PvP</h1>
-                        <p>A new battle player versus player</p>
-                        <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#modalBattlePvp">Go to battle</button>
+                    <div class="carousel-caption d-md-block text-dark">
+                        <div class="card text-center">
+                            <div class="card-header bg-primary text-white fs-3">
+                                Battle PvP
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title"></h5>
+                                <p class="card-text">Search for quick battles to evolve your division</p>
+                                <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#modalBattlePvp">Go to battle</button>
+                            </div>
+                            <div class="card-footer text-muted">
+                                2 days left
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="carousel-item">
