--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 </head>
 <body class="h-100">
     <main class="d-flex flex-column h-100"></main>
+    <!-- Modal Error -->
+    <div class="modal fade" id="modalError" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                    <button type="button" class="btn-close close-battle" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Error, Page is not load.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary close-battle" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" src="assets/bootstrap-5.0.0-beta3-dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="assets/jquery/jquery-3.6.0.min.js"></script>
     <script type="module" src="assets/js/script.js"></script>
