--- a/not-logged-in.html
+++ b/not-logged-in.html
@@ -26,6 +26,6 @@
 
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-        <span class="text-muted">Project by Charles © <span id="yearNow">--</span></span>
+        <span class="text-muted">Project by Charles © <span id="yearDate">--</span></span>
     </div>
 </footer>
