--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
         <div class="col-lg">
             <h3 class="mt-5">Login</h3>
             <hr>
-            <form id="formRegister">
+            <form id="formLogin">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Your e-mail</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -17,7 +17,6 @@
                     <label class="form-check-label" for="exampleCheck1">Save login</label>
                 </div>
                 <button type="submit" class="btn btn-primary mb-3">Login</button>
-                <button type="button" class="btn btn-danger mb-3" id="notFound">Not found</button>
             </form>
         </div>
     </div>
