--- a/logged.html
+++ b/logged.html
@@ -150,3 +150,22 @@
 		</div>
 	</div>
 </div>
+
+<!-- Modal My deck -->
+<div class="modal fade" id="modalDeck" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+	<div class="modal-dialog modal-fullscreen">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">My deck</h5>
+				<button type="button" class="btn-close close-battle" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Coming soon
+            </div>
+			<div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="saveDeck">Save</button>
+				<button type="button" class="btn btn-secondary close-battle" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
