--- a/pages/my-cards.html
+++ b/pages/my-cards.html
@@ -3,7 +3,7 @@
         <div class="col-lg mt-5 mb-5 pb-5">
             <h3>My cards</h3>
             <hr>
-            <button type="button" class="btn btn-secondary btn-block w-100 mb-3">Click to edit your deck</button>
+            <button type="button" class="btn btn-secondary btn-block w-100 mb-3" data-bs-toggle="modal" data-bs-target="#modalDeck">Click to edit your deck</button>
             <div class="row row-cols-1 row-cols-md-4 g-4 mb-5">
                 <div class="col">
                     <div class="card h-100">
