--- a/pages/store.html
+++ b/pages/store.html
@@ -12,7 +12,7 @@
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <div class="alert alert-warning text-center" role="alert">New items in 02:00</div>
+                            <div class="alert alert-warning text-center" role="alert">New items in 02h</div>
                             <div class="row row-cols-1 row-cols-md-3 g-4 mb-3 text-center">
                                 <div class="col">
                                     <div class="card mb-4 rounded-3 shadow-sm h-100">
