--- a/pages/store.html
+++ b/pages/store.html
@@ -28,7 +28,7 @@
                                                 <li class="text-secondary">Common</li>
                                             </ul>
                                             <h1 class="card-title pricing-card-title"><i class="bi bi-bullseye"></i> <small class="text-muted fw-light">1.000</small></h1>
-                                            <button type="button" class="w-100 btn btn-lg btn-outline-secondary align-self-end mt-auto">Buy</button>
+                                            <button type="button" class="w-100 btn btn-lg btn-outline-secondary align-self-end mt-auto" data-bs-toggle="modal" data-bs-target="#modalConfirmBuyPurchase">Buy</button>
                                         </div>
                                     </div>
                                 </div>
