--- a/logged.html
+++ b/logged.html
@@ -157,14 +157,33 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">My deck</h5>
-				<button type="button" class="btn-close close-battle" data-bs-dismiss="modal" aria-label="Close"></button>
+				<button type="button" class="btn-close close-deck" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
 				Coming soon
             </div>
 			<div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="saveDeck">Save</button>
-				<button type="button" class="btn btn-secondary close-battle" data-bs-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-secondary close-deck" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Modal Confirm Buy Purchase -->
+<div class="modal fade" id="modalConfirmBuyPurchase" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+	<div class="modal-dialog modal-sm">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Confirm</h5>
+				<button type="button" class="btn-close close-buy-purchase" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Confirm purchase? <i class="bi bi-bullseye"></i> 1.000
+                <button type="button" class="btn btn-danger w-100 d-block mt-3 mb-3 mx-auto" id="btnConfirmBuyPurchase">Buy</button>
+            </div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary close-buy-purchase" data-bs-dismiss="modal">Cancel</button>
 			</div>
 		</div>
 	</div>
