--- a/logged.html
+++ b/logged.html
@@ -85,11 +85,11 @@
 </div>
 
 <!-- Modal Profile -->
-<div class="modal fade" id="modalProfile" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="modalProfile" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Profile</h5>
+				<h5 class="modal-title" id="exampleModalLabel1">Profile</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
@@ -129,11 +129,11 @@
 </div>
 
 <!-- Modal Battle Pvp -->
-<div class="modal fade" id="modalBattlePvp" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="modalBattlePvp" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
 	<div class="modal-dialog modal-sm">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Battle PvP</h5>
+				<h5 class="modal-title" id="exampleModalLabel2">Battle PvP</h5>
 				<button type="button" class="btn-close close-battle" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
@@ -152,11 +152,11 @@
 </div>
 
 <!-- Modal My deck -->
-<div class="modal fade" id="modalDeck" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="modalDeck" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
 	<div class="modal-dialog modal-fullscreen">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">My deck</h5>
+				<h5 class="modal-title" id="exampleModalLabel3">My deck</h5>
 				<button type="button" class="btn-close close-deck" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
@@ -171,11 +171,11 @@
 </div>
 
 <!-- Modal Confirm Buy Purchase -->
-<div class="modal fade" id="modalConfirmBuyPurchase" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="modalConfirmBuyPurchase" tabindex="-1" aria-labelledby="exampleModalLabel4" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
 	<div class="modal-dialog modal-sm">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Confirm</h5>
+				<h5 class="modal-title" id="exampleModalLabel4">Confirm</h5>
 				<button type="button" class="btn-close close-buy-purchase" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
