--- a/pages/my-cards.html
+++ b/pages/my-cards.html
@@ -12,8 +12,8 @@
                             <h5 class="card-title text-primary">Card title</h5>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li class="mb-2">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</li>
-                                <li><i class="bi bi-heart"></i> Life: 1.500</li>
-                                <li><i class="bi bi-hammer"></i> Attack: 3.500</li>
+                                <li class="text-danger"><i class="bi bi-heart"></i> Life: 2.500</li>
+                                <li class="text-success"><i class="bi bi-hammer"></i> Attack: 4.500</li>
                                 <li class="text-primary">Rare</li>
                             </ul>
                         </div>
@@ -26,8 +26,8 @@
                             <h5 class="card-title text-warning">Card title</h5>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li class="mb-2">This is a longer card.</li>
-                                <li><i class="bi bi-heart"></i> Life: 1.500</li>
-                                <li><i class="bi bi-hammer"></i> Attack: 3.500</li>
+                                <li class="text-danger"><i class="bi bi-heart"></i> Life: 10.500</li>
+                                <li class="text-success"><i class="bi bi-hammer"></i> Attack: 13.200</li>
                                 <li class="text-warning">Epic</li>
                             </ul>
                         </div>
@@ -40,8 +40,8 @@
                             <h5 class="card-title">Card title</h5>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li class="mb-2">This is a longer card with supporting text below as a natural lead-in to additional content.</li>
-                                <li><i class="bi bi-heart"></i> Life: 1.500</li>
-                                <li><i class="bi bi-hammer"></i> Attack: 3.500</li>
+                                <li class="text-danger"><i class="bi bi-heart"></i> Life: 1.500</li>
+                                <li class="text-success"><i class="bi bi-hammer"></i> Attack: 3.500</li>
                                 <li>Common</li>
                             </ul>
                         </div>
@@ -54,8 +54,8 @@
                             <h5 class="card-title">Card title</h5>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li class="mb-2">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</li>
-                                <li><i class="bi bi-heart"></i> Life: 1.500</li>
-                                <li><i class="bi bi-hammer"></i> Attack: 3.500</li>
+                                <li class="text-danger"><i class="bi bi-heart"></i> Life: 1.500</li>
+                                <li class="text-success"><i class="bi bi-hammer"></i> Attack: 3.500</li>
                                 <li>Common</li>
                             </ul>
                         </div>
@@ -68,8 +68,8 @@
                             <h5 class="card-title">Card title</h5>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li class="mb-2">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</li>
-                                <li><i class="bi bi-heart"></i> Life: 1.500</li>
-                                <li><i class="bi bi-hammer"></i> Attack: 3.500</li>
+                                <li class="text-danger"><i class="bi bi-heart"></i> Life: 1.500</li>
+                                <li class="text-success"><i class="bi bi-hammer"></i> Attack: 3.500</li>
                                 <li>Common</li>
                             </ul>
                         </div>
