--- a/logged.html
+++ b/logged.html
@@ -46,7 +46,7 @@
     <div class="container-fluid">
         <ul class="nav col-12 col-xs-auto my-2 justify-content-center mx-auto my-md-0 text-small text-center">
             <li class="col-3">
-                <a href="/home" class="nav-link text-white page-logged" id="page-home">
+                <a href="/home" class="nav-link text-muted page-logged" id="page-home">
                     <i class="bi bi-house d-block mb-1 text-center"></i>
                     Home
                 </a>
