--- a/not-logged-in.html
+++ b/not-logged-in.html
@@ -6,7 +6,7 @@
             </p>
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                 <li>
-                    <a href="/login" class="nav-link text-white page-not-logged-in" id="page-login">
+                    <a href="/login" class="nav-link text-muted page-not-logged-in" id="page-login">
                         <i class="bi bi-door-open d-block mb-1 text-center"></i>
                         Login
                     </a>
